first file edit changes

--- a/newForm.html
+++ b/newForm.html
@@ -21,7 +21,7 @@
                         <span class="errormsg" id="errorrFirstName">Please Enter First Name</span>
                      </div>
                     <div class="input-group">
-                        <label for="exampleTextInput">Last Name.</label>
+                        <label for="exampleTextInput">Last Name</label>
                         <input type="text" id="userLastName" aria-describedby="inputHelp" class="input-text">
                         <span class="errormsg" id="errorrLastName">Please Enter Last Name</span>
                     </div>
